# agents

./: .gitignore  .lighthouserc.json  IMPLEMENTATION_SUMMARY.md  PRE_PR_CHECKLIST.md  README.md  README_math_fixer.md  fix_math_linebreaks.py  mkdocs.yml  pyproject.toml  requirements.txt  test_apple_silicon.py  test_implementation.py
.github/: README.md
.github/workflows/: docs.yml
code/: information_theory.py  matrix_multiplication.py
code/week-1/: autoregressive_lm_healthcare.py  chain_rule_language_model.py  conditional_probability_calculator.py  continuous_distributions_healthcare.py  discrete_distributions_healthcare.py  finetune_bert_classification.py  gradient_descent_pytorch_examples.py  joint_marginal_analyzer.py  llm_evaluation_metrics.py  svd_pytorch_examples.py  transformer_encoder.py  word2vec_skipgram.py
code/week-1/RL/: base_mdp.py  comprehensive_demo.py  healthcare_examples.py  policy_iteration.py  q_learning.py  sarsa.py  value_iteration.py
docs/: CNAME  deployment.md  index.md  quick-start.md  roadmap.md  tags.md  test-admonitions.md  test-math.md
docs/code-examples/: index.md
docs/code-examples/week-1/: index.md
docs/getting-started/: apple-silicon.md  development-setup.md  installation.md
docs/includes/: medical-disclaimer.md  mkdocs.md
docs/javascripts/: mathjax.js  progress-tracker.js  study-components.js
docs/macros/: __init__.py
docs/materials/: .pages  index.md
docs/materials/llm/: .pages  evaluation.md  index.md  llm-fundamentals.md  word-embeddings.md
docs/materials/math/: .pages  eigenvalues-eigenvectors.md  index.md  information-theory.md  linear-algebra.md  mathematical-foundations.md  matrix-multiplication.md  probability-theory.md  vector-spaces.md
docs/materials/ml/: .pages  index.md  mdp.md  reinforcement-learning.md  rl-llm-foundation.md
docs/materials/week-1/: mathematical-foundations.md
docs/materials/weeks-1/: gradient_descent.md  matrix_multiplication.md  rl_llm_foundation.md  svd.md  word_embeddings_and_llm.md
docs/overrides/partials/: progress-tracker.html
docs/progress/: index.md
docs/resources/: index.md
docs/study-guide/: index.md
docs/study-guide/week-1/: checklist.md  index.md
docs/stylesheets/: extra.css
materials/weeks-1/: eigenvalues_eigenvectors.md  ll_evaluation.md  llm.md  matrix_multiplication.md  mdp.md  probability_theory.md  rl_llm_foundation.md  svd.md  vector_spaces.md  word_embeddings_and_llm.md
scripts/: clean_cache.py
