[project]
name = "agents"
version = "0.1.0"
dependencies = [
    "torch",
    "scikit-learn",
    "langchain",
    "openai",
    "deepseek",
    "google-generativeai",
    "jupyterlab",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "poethepoet",
]

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.10"

[tool.pytest.ini_options]
addopts = "-q"

[tool.poe.tasks.format]
cmd = "ruff format ."

[tool.poe.tasks.lint]
cmd = "ruff check ."

[tool.poe.tasks.typecheck]
cmd = "mypy ."

[tool.poe.tasks.test]
cmd = "pytest"

[tool.poe.tasks.clean_cache]
script = "scripts/clean_cache.py"

[tool.poe.tasks.check_all]
sequence = ["format", "lint", "typecheck", "test"]

