[project]
name = "agents"
version = "0.1.0"

requires-python = ">=3.11"
dependencies = [
    "torch",
    "scikit-learn",
    "langchain",
    "openai",
    "deepseek",
    "google-generativeai",
    "jupyterlab",
    "torchvision>=0.22.0",
    "torchaudio>=2.7.0",
    "transformers>=4.52.4",
    "datasets>=3.6.0",
    "tokenizers>=0.21.1",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "accelerate",  # Hugging Face acceleration library for Apple Silicon
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "poethepoet",
    "jupyterlab"
]

[tool.ruff]
line-length = 88

[tool.mypy]

[tool.pytest.ini_options]
addopts = "-q"

[tool.poe.tasks.format]
cmd = "ruff format ."

[tool.poe.tasks.lint]
cmd = "ruff check ."

[tool.poe.tasks.typecheck]
cmd = "mypy ."

[tool.poe.tasks.test]
cmd = "pytest"

[tool.poe.tasks.clean_cache]
script = "scripts/clean_cache.py"

[tool.poe.tasks.check_all]
sequence = ["format", "lint", "typecheck", "test"]
